# axiom-bayes

./: .gitignore  Makefile  README.md  axiom-bayes.code-workspace  jobs_task2_smm.txt  jobs_task2_smm_5k_rerun.txt  jobs_task3_tmm.txt  jobs_task3_tmm_5k_rerun.txt  jobs_task4_rmm_5k_rerun.txt  pyproject.toml  requirements-lock.txt
.cursor/rules/: project.mdc
analysis/: __init__.py  helpers.py  metrics.py  plotting.py
analysis/notebooks/: 01_learning_curves.ipynb  02_interpretability.ipynb  03_ablations.ipynb  phase1_prior_sensitivity.ipynb  phase2_bmr.ipynb  phase3_exploration.ipynb
axiom/: __init__.py  agent.py  cli.py
axiom/inference/: __init__.py  bmr.py  structure_learning.py  variational.py
axiom/models/: __init__.py  imm.py  rmm.py  smm.py  tmm.py
axiom/planning/: __init__.py  active_inference.py
baselines/: __init__.py  bbf.py  dreamerv3.py  random_agent.py
docs/: extensions.md  paper_notes.md  prompting_guide.md  proposal.md  replication_log.md  roadman_alt.md  roadmap.md  roadmap_implementation.md  roadmap_replication.md  supercomputer.md  vendor_versions.txt
docs/presentation/: script.md  slides.md
docs/report/: Makefile  references.bib  report.tex
envs/: __init__.py  gameworld.py  utils.py
experiments/: __init__.py  run_ablation.py  run_experiment.py  run_sweep.py  run_with_prediction_error.py  sweep.py
experiments/configs/: bmr_ablation.yaml  bounce.yaml  default.yaml  info_gain_sweep.yaml  prior_sensitivity_rmm.yaml  prior_sensitivity_smm.yaml  (+1 more)
tests/: test_agent.py  test_imm.py  test_inference.py  test_infrastructure.py  test_rmm.py  test_setup.py  test_smm.py  test_tmm.py
(+40 files in other folders)
