[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "axiom-analysis"
version = "0.1.0"
description = "Bayesian analysis of the AXIOM active inference agent (CS 677 project)"
readme = "README.md"
requires-python = ">=3.10,<3.12"
dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
    "seaborn",
    "pandas",
    "pyyaml",
    "tqdm",
    "jax==0.4.35",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "ipython",
    "jupyterlab",
    "ruff",
]
gpu = [
    "jax[cuda12]",
]

[tool.setuptools.packages.find]
include = ["experiments*", "analysis*"]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
